# allCode

./: .gitignore  git stash 恢复.md  help.hpp  matrix-test.cpp  matrix.cpp  matrix.hpp  matrix_client.cpp
.vscode - backup(with OpenCV4.4.0 settings)/: tasks.json
ArbitaryTest/: example1.cpp  helloworld.cpp
PythonCode/: correlationAnalysis.py  神经网络hello.py  神经网络process.py
SelfMatrixClass/: help.hpp  matrix-test.cpp  matrix.cpp  matrix.hpp  matrix_client.cpp
SelfMatrixClass/matrix_client/: Makefile.win  Matrix.cpp  Matrix.hpp  MatrixClient.dev  MatrixClient.exe.Manifest  MatrixClient.layout  MatrixClient_private.aps  MatrixClient_private.h  MatrixClient_private.rc  MatrixClient_private.res  help.hpp  matrix-client.cpp
SelfMatrixClass/高斯消元法/: Gauss-elimination.cpp
Windmills-TEST/: armorDetect.cpp  main.cpp  mainDiscernTest.cpp
hero2021-master/: CMakeLists.txt  README.md  README.txt  RM2018_Adv.cbp  armorDetector.hpp  armorTracker.hpp  autoTracker.hpp  autolead.hpp  build.sh  camparams_0.xml  config.ini  config_infancy.ini  config_senitel.ini  custom_definations.hpp  darknet.h  dfc.hpp  dfcHiter.hpp  dnnManager.hpp  main.cpp  serial.hpp  util.hpp
lightTracker/: Readme.md  lightTracker.cpp  params.guide.txt  params.txt
robomaster-bulletmodel/: gimbal_control.cpp
能量机关击打/: Makefile  kalman.hpp  main.cpp  random.cpp  random.hpp  tool.hpp
